style.css
/* ... */
.account{
    font-weight: 700;
}

.account ul li a{
    padding: 0 1rem 0 0 !important;
}

.main-menu{
    padding: 0;
}

.main-menu ul{  
    padding: 0; 
    margin: 0; 
    font-size: 18px; 
    font-weight: 500; 
    border-radius: 0;    
}

.main-menu ul li{ 
    display: inline;  
    margin: 0 5px 0 0;
}

.main-menu ul li:last-child{ 
    margin: 0; 
}

.main-menu > ul li a,
.navbar-light .navbar-nav .nav-link{  
    color: #303030; 
    text-decoration: none;
    padding: 4px 15px 3px;
}

.main-menu ul li a.nav-link:first-child{ 
    padding: 10px 15px 3px 0px;
}

.main-menu ul li ul{
    background-color: #000;
}

.main-menu ul li ul li{
    margin: 0;
}

.main-menu ul li ul li a{
    padding: 0.5rem;
    color: #fff;
}

.main-menu .navbar-nav .active>.nav-link{ 
    color: #CA2424; 
}

.main-menu .dropdown-item:focus, 
.main-menu .dropdown-item:hover {
    color: #fff;
    background-color: #272c33;
}

.main-menu .dropdown:hover>.dropdown-menu, 
.main-menu .dropup:hover>.dropdown-menu  {
  display: block;
}

.main-menu .dropdown-item.active, 
.main-menu .dropdown-item:active {
    background-color: #d2335b;
}

.main-menu .navbar-toggler{
    border: none;
    padding-left: 0;    
}

.main-menu .dropdown-toggle::after {
    vertical-align: 0.155em;
}

.main-menu .navbar-toggler-icon {
    background-image: url('img/hamburger-menu.svg');
}

.main-menu ul li .dropdown-menu .dropdown > a::after{
    display: inline-block;
    margin-left: 0.355em;
    vertical-align: 0.2em;
    content: "";
    border-top: 0.3em solid;
    border-right: 0.3em solid transparent;
    border-bottom: 0;
    border-left: 0.3em solid transparent;
    transform: rotate(-90deg);
    -webkit-transform: rotate(-90deg);
    -moz-transform: rotate(-90deg);
    -ms-transform: rotate(-90deg);
    -o-transform: rotate(-90deg);
}

.main-menu .dropdown-menu li { 
    display: block;
    margin: 0px;
    padding: 0px;
}

.main-menu .dropdown-menu .dropdown-menu { 
    top: -1px;
    left: 100%;
}

.account.col-12.d-flex {
    padding-top: 23px;
    justify-content: space-between;
}

/* Cart */
.cart .cart-icon{
    background: url('img/cart.svg');
    background-repeat: no-repeat;
    height: 25px;
    width: 25px;
    display: inline-block;
    vertical-align: bottom;
}

.cart .items{
    background: #CA2424;
    color: #fff;
    width: 20px;
    height: 20px;
    border-radius: 50%;
    display: inline-block;
    text-align: center;
}

/* Flex Slider */
.flexslider{
    border: 0 !important;
}

.flex-control-nav {
    bottom: 10px !important;
}

.slider-details-container {
    color: #FFF;
    top: 50%;
    transform: translateY(-50%);
    position: absolute;
    text-align: center;
 }

.slider-details-container h1{
    font-family: 'Seaweed Script';
    font-size: 3.7rem;
}

.slider-details-container .subtitle{
    font-size: 1.3em;
    margin-bottom: 15px;
    display: 
    justify-content: center;       
}

.slider-details-container .slider-title{
    color: #FFF;
    font-weight: 700;
}

.slider-details-container a{
    background-color: rgb(240,145,99);
    color: black;
    border-radius: 5px;
    font-weight: 400;
    text-transform: uppercase;
    padding: 0.8em;
    display: inline-block;
    font-size: 1.2em;
}

.slider-details-container a:hover{
    background: darkred;
    color: white;
}
 
.flexslider .slides {
    padding: 0 !important;
}

.flex-control-paging li a {
    background: rgba(189, 189, 189, 0.5) !important;
    height: 10px !important;
    width: 15px !important;
}

.flex-control-paging li a.flex-active {
    background: #D2335B !important;
    width: 25px !important;
}

.flex-control-nav li {
    margin: 0 2px !important;
}


/* Frontend Product Lists */
.home main .section-title{
    position: relative;
    margin-bottom: 20px;
}

.home main .section-title h2{
    font-family: 'Seaweed Script';
    font-size: 3.5rem;    
    position: relative;
    display: inline-block;
    vertical-align: top;
    padding: 0 20px 0 0;
    margin: 0;    
}

.home section.sixty4kitchen-blog{
    padding: 40px 0;
}

.home .woocommerce ul.products {
    border-top: none;
}

.home .woocommerce ul.products li.product .woocommerce-loop-product__title {
    font-family: 'Seaweed Script';
    font-size: 1.65rem;
    font-weight: 600;
    margin: 0;
    padding: 0;
    display: table;    
}

.home .popular-products .woocommerce ul.products li.product .button,
.home .new-arrivals .woocommerce ul.products li.product .button {
    background-color: #D2335B;
    color: #fff;
    text-decoration: none;
    line-height: 1;
    padding: 0.618em 1em;
    font-weight: 700;
    border-radius: 3px;
    display: inline-block;
    text-align: -webkit-auto;
}

.woocommerce div.product .product_title{
    display: flex;
}

p.price{
    display: flex;
}

.content-area p{
    display: flex;
}

span.posted_in{
    display: flex !important;
}

li#tab-title-description{
    display: table;
}

.home .popular-products .woocommerce ul.products li.product .button:hover,
.home .new-arrivals .woocommerce ul.products li.product .button:hover {
    color: #666;
}

.home .woocommerce ul.products li.product .button {
    margin-top: 0;
}

.deal-of-the-week {
    background: #f7f7f7;
    padding: 60px 0;
}

.deal-of-the-week .row{
    padding: 30px 0;
}

.deal-of-the-week .discount{
    background: #ff6891;
    color: #fff;
    padding: 0.5rem;
    display: inline-block;
    margin: 20px 0;  
    position: relative;  
}

.deal-of-the-week .discount:before{
    content: '';
    position: absolute;
    top: 6%;
    left: 0;
    height: 1px;
    width: 100%;
    border: 1px dashed #ffc8d8;    
}

.deal-of-the-week .discount:after{
    content: '';
    position: absolute;
    bottom: 5%;
    left: 0;
    height: 1px;
    width: 100%;
    border: 1px dashed #ffc8d8;    
}

.deal-of-the-week .section-title{
    margin: 0 !important;
}

.deal-of-the-week h2{
    font-size: 4rem !important;
}
/* ... */

